--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,14 @@ version: 1.0.1+3
 homepage: https://github.com/mayurpitroda96/easy_audio_trimmer
 
 environment:
-  sdk: '>=2.18.4 <3.0.0'
+  sdk: ">=2.18.4 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  
-  audioplayers: ^4.1.0
-  ffmpeg_kit_flutter: ^5.1.0-LTS
+
+  audioplayers: ^5.1.0
+  ffmpeg_kit_flutter: ^6.0.3
   intl: ^0.18.1
   path: ^1.8.2
   path_provider: ^2.0.11
@@ -22,5 +22,3 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
-
-
