--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
 
   audioplayers: ^5.2.0
-  ffmpeg_kit_flutter: ^6.0.3
+  ffmpeg_kit_flutter_audio: ^6.0.3
   intl: ^0.18.1
   path: ^1.8.2
   path_provider: ^2.0.11
